Created locally hosted LM to use to create story and added steps on how to access. Now working on n8n workflow

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ env/
 useless_rn
 *.mp3
 *.mp4
+package-lock.json
+package.json
 
 # --------------------
 # Python cache / compiled files
@@ -53,3 +55,4 @@ __pycache__/
 # Git
 # --------------------
 *.orig
+node_modules
